# MiniCAM

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  planprompt.md  vcpkg-configuration.json
App/: CMakeLists.txt  main.cpp
Core/: CMakeLists.txt
Core/include/: BoundingBox.h  GeoTypes.h  Part.h  STLReader.h
Core/src/: BoundingBox.cpp  Part.cpp  STLReader.cpp  main.cpp
stl/: twistcube.stl
